--- a/BancoInvest.Infra.IoC/BancoInvest.Infra.IoC.csproj
+++ b/BancoInvest.Infra.IoC/BancoInvest.Infra.IoC.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -6,6 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+	<ItemGroup>
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	</ItemGroup>
+	
   <ItemGroup>
     <ProjectReference Include="..\BancoInvest.Application\BancoInvest.Application.csproj" />
     <ProjectReference Include="..\BancoInvest.Domain\BancoInvest.Domain.csproj" />
